--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "dotenv": "16.0.0",
     "express": "^4.17.1",
     "morgan": "1.10.0",
+    "node": "^22.0.0",
     "nodemon": "^3.1.0",
     "parcel": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
     "sequelize": "^6.23.2",
-    "sqlite3": "^5.1.1"
+    "sqlite3": "^5.1.1",
+    "vite": "^5.2.10"
   },
   "devDependencies": {
     "@testing-library/react": "^12.0.0",
