--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-test-renderer": "^18.2.0",
     "sequelize": "^6.23.2",
     "sqlite3": "^5.1.1",
-    "vite": "^5.2.10"
+    "vite": "^5.2.10",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
     "@testing-library/react": "^12.0.0",
