--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "build-scripts": "^2.1.2",
     "cors": "^2.8.5",
     "dotenv": "16.0.0",
-    "express": "^4.17.1",
+    "express": "^4.19.2",
+    "jq": "^1.7.2",
     "morgan": "1.10.0",
     "node": "^22.0.0",
+    "nodejs": "^0.0.0",
     "nodemon": "^3.1.0",
     "parcel": "^2.8.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-test-renderer": "^18.2.0",
     "sequelize": "^6.23.2",
     "sqlite3": "^5.1.1",
