--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-test-renderer": "^18.2.0",
     "sequelize": "^6.23.2",
     "sqlite3": "^5.1.1",
+    "terraform": "^1.23.0",
     "vite": "^5.2.10",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
